--- a/codemania/CodeMania.Android/Resources/layout/Main.axml
+++ b/codemania/CodeMania.Android/Resources/layout/Main.axml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ListView xmlns:p1="http://schemas.android.com/apk/res/android"
-    p1:minWidth="25px"
-    p1:minHeight="25px"
-    p1:layout_width="match_parent"
-    p1:layout_height="match_parent"
-    p1:id="@+id/currencyListView" />
+<GridView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/currencyGridView"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:numColumns="2"
+    android:verticalSpacing="10dp"
+    android:horizontalSpacing="10dp"
+    android:stretchMode="columnWidth"
+    android:gravity="center" />
