Code complete, feature parity

--- a/codemania/CodeMania.Android/Resources/layout/CurrencyView.axml
+++ b/codemania/CodeMania.Android/Resources/layout/CurrencyView.axml
@@ -8,31 +8,35 @@
     <TextView
         android:text="Large Text"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:layout_width="wrap_content"
-        android:layout_height="fill_parent"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
         android:id="@+id/currencyName"
-        android:gravity="center_vertical"
-        android:paddingTop="16dp"
-        android:paddingRight="16dp"
-        android:paddingBottom="16dp"
-        android:paddingLeft="16dp"
-        android:textStyle="bold"
-        android:minWidth="80dp" />
+        android:gravity="center"
+        android:paddingTop="4dp"
+        android:paddingRight="4dp"
+        android:paddingBottom="4dp"
+        android:paddingLeft="4dp"
+        android:textStyle="bold" />
     <TextView
         android:text="Small Text"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/currencyRate"
-        android:layout_toRightOf="@+id/currencyName"
-        android:paddingTop="8dp"
-        android:paddingBottom="8dp" />
+        android:layout_below="@+id/currencyName"
+        android:paddingTop="4dp"
+        android:paddingBottom="4dp"
+        android:gravity="center" />
     <TextView
         android:text="Medium Text"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/currencyValue"
-        android:layout_toRightOf="@+id/currencyName"
+        android:gravity="center"
         android:layout_below="@+id/currencyRate" />
+    <View
+        android:background="#aaaaaa"
+        android:layout_width="match_parent"
+        android:layout_height="1dp" />
 </RelativeLayout>
